// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test StartOffsetBlock should render correctly 1`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Text Offset
    </div>
    <div>
      mock-unit-input min:
      0
      max:
      100
      decimal:
      0
      defaultValue:
      0
      displayMultiValue:
      false
      className:
      {"no-unit":true,"option-input":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
</div>
`;

exports[`test StartOffsetBlock should render correctly 2`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Text Offset
    </div>
    <div>
      mock-unit-input min:
      0
      max:
      100
      decimal:
      0
      defaultValue:
      0
      displayMultiValue:
      false
      className:
      {"no-unit":true,"option-input":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
</div>
`;

exports[`test StartOffsetBlock should render correctly 3`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Text Offset
    </div>
    <div>
      mock-unit-input min:
      0
      max:
      100
      decimal:
      0
      defaultValue:
      0
      displayMultiValue:
      false
      className:
      {"no-unit":true,"option-input":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
</div>
`;

exports[`test StartOffsetBlock should render correctly in mobile 1`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    start_offset
    label:
    Text Offset
    min:
    0
    max:
    100
    decimal:
    0
    value:
    0
    unit:
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;

exports[`test StartOffsetBlock should render correctly with multiple values 1`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Text Offset
    </div>
    <div>
      mock-unit-input min:
      0
      max:
      100
      decimal:
      0
      defaultValue:
      0
      displayMultiValue:
      true
      className:
      {"no-unit":true,"option-input":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
</div>
`;

exports[`test StartOffsetBlock should render correctly with multiple values in mobile 1`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    start_offset
    label:
    Text Offset
    min:
    0
    max:
    100
    decimal:
    0
    value:
    0
    unit:
    hasMultiValue:
    true
    <input />
  </div>
</div>
`;
